; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_skbuff.c_skb_release_head_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_skbuff.c_skb_release_head_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i64, i64, i32, i32, i32, i32 (%struct.sk_buff*)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sk_buff*)* @skb_release_head_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skb_release_head_state(%struct.sk_buff* %0) #0 {
  %2 = alloca %struct.sk_buff*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %2, align 8
  %3 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %4 = call i32 @skb_dst_drop(%struct.sk_buff* %3)
  %5 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %6 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %5, i32 0, i32 5
  %7 = load i32 (%struct.sk_buff*)*, i32 (%struct.sk_buff*)** %6, align 8
  %8 = icmp ne i32 (%struct.sk_buff*)* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = call i32 (...) @in_irq()
  %11 = call i32 @WARN_ON(i32 %10)
  %12 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %13 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %12, i32 0, i32 5
  %14 = load i32 (%struct.sk_buff*)*, i32 (%struct.sk_buff*)** %13, align 8
  %15 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %16 = call i32 %14(%struct.sk_buff* %15)
  br label %17

17:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @skb_dst_drop(%struct.sk_buff*) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @in_irq(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
